@@ -14,6 +14,8 @@ zeit.content.article changes
 
 - Register and cleanup keydown event handlers properly (VIV-381).
 
+- Remove iPad/Desktop tabs from inline preview (VIV-393).
+
 
 3.3.1 (2014-05-13)
 ------------------
